<resources>
    <string name="app_name">Dicoding Storyposting</string>
    <string name="title">Welcome to Dicoding Storyposting!</string>
    <string name="title2">Start sharing your stories with others</string>
    <string name="title3">Every story you share is important</string>
    <string name="description1">Ready to start sharing your stories? Dive in and login to share stories. We can\'t wait to see what you\'ll create!</string>
    <string name="description2">You can start by sharing your stories within our welcoming community and be inspired by fellow dicoding users</string>
    <string name="description3">Your stories matter. They have the power to inspire others and make a difference in our community. Share yours today!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="guest">Posting as a Guest</string>


    <string name="error_password">Password must be more than 8 characters</string>
    <string name="error_email">Please enter correct E-mail format</string>
    <string name="register_here">Register here</string>
    <string name="no_account">Don\'t have an account yet?</string>


    <string name="story">Post your own story here....</string>
    <string name="setting">Setting</string>
    <string name="submit">Upload</string>
    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>


    <string name="error_open_camera">Error opening the camera</string>
    <string name="login_title">Please enter your E-mail and Password</string>
    <string name="login_subtitle">Login to your account</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="register_title">Please input your data to register</string>
    <string name="register_subtitle">Register your account</string>
    <string name="name">Name</string>
    <string name="have_account">Have an account already?</string>
    <string name="login_here">Login here</string>
    <string name="gallery">Gallery</string>
    <string name="camerax">CameraX</string>
    <string name="language">Change your language</string>
    <string name="logout">Logout</string>
    <string name="camera_capture_error">Failed to capture image</string>
    <string name="error_login">Wrong email or password</string>
    <string name="error_register">Email already registered</string>
    <string name="register_success">Register Success, please login to your account</string>
    <string name="error_get_story">Error fetching the data, please try again</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="error_post_story">Something went wrong, please try again</string>
    <string name="language_available">Only available in English (US) and Indonesian</string>
    <string name="cta_story">Create your story now!</string>
    <string name="cta_story_title">Interested to make your own story? Start now</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>

    <string name="marker" translatable="false">Marker: %1$.6f, %2$.6f</string>
    <string name="lat_long" translatable="false">Lat: %1$.6f, Long: %2$.6f</string>
    <string name="position">Your Position: %1$.6f, %2$.6f</string>
    <string name="open_map">Open map from this location</string>
    <string name="no_location">No location Set For This Story</string>
    <string name="posted_location">Location of posted stories</string>
    <string name="current_location">Current Location</string>
    <string name="map_error">Failed to show the result, please try again</string>
    <string name="error_map_access">Cannot Access Location, please try again</string>

    <string name="retry">Retry</string>

    <string name="capture_image_content_desc">Capture the image</string>
    <string name="switch_camera_content_desc">Switch your camera</string>
    <string name="logo_dicoding_content_desc" translatable="false">Logo Dicoding</string>
    <string name="photo_posted_content_desc">Photo posted by the user</string>
    <string name="avatar_content_desc" translatable="false">Avatar</string>
    <string name="menu_carousel_1_content_desc" translatable="false">Menu Carousel 1</string>
    <string name="menu_carousel_2_content_desc" translatable="false">Menu Carousel 2</string>
    <string name="menu_carousel_3_content_desc" translatable="false">Menu Carousel 3</string>
    <string name="photo_uploaded_content_desc">Photo Uploaded</string>
    <string name="location_symbol_content_desc">Location symbol</string>
    <string name="no_location_set">No location is set yet</string>
    <string name="post_with_map">Post with a Location</string>
    <string name="choose_location">Choose Your Preferred Location</string>
    <string name="confirm_location">Want to use this location?</string>
    <string name="confirm">Confirm</string>
    <string name="maps" translatable="false">Maps</string>
    <string name="story_location">The location of the story</string>

</resources>