<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.story.StoryActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="0dp">

    <ImageView
        android:contentDescription="@string/logo_dicoding_content_desc"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/dicoding_logo_blur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:contentDescription="@string/photo_uploaded_content_desc"
        android:id="@+id/img_story_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/dicoding_svg"
        android:transitionName="logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/dark_blue"
        android:drawableEnd="@drawable/baseline_insert_photo_24"
        android:text="@string/gallery"
        android:padding="8dp"
        android:textColor="@color/white"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/img_story_photo" />

    <com.belajar.storyapp.customview.ButtonOutline
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:drawableEnd="@drawable/baseline_camera_alt_24"
        android:text="@string/camerax"
        android:textAllCaps="false"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/img_story_photo"
        app:layout_constraintStart_toEndOf="@+id/guideline2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:contentDescription="@string/location_symbol_content_desc"
        android:id="@+id/img_location"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_location_on_24"
        android:background="@color/dark_blue"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_lat_lng"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_location_set"
        android:fontFamily="sans-serif-condensed-medium"
        android:textStyle="bold"
        android:textSize="14sp"
        android:gravity="start"
        android:background="@color/white"
        android:padding="16dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toEndOf="@+id/img_location"
        app:layout_constraintTop_toTopOf="@+id/img_location"
        app:layout_constraintBottom_toBottomOf="@+id/img_location"/>

    <Button
        android:id="@+id/btn_maps"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cyan"
        android:drawableEnd="@drawable/baseline_location_on_24"
        android:text="@string/post_with_map"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lat_lng" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_maps"
        app:layout_constraintBottom_toTopOf="@+id/button_add">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:transitionName="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:ems="10"
                android:hint="@string/story"
                android:isScrollContainer="true"
                android:scrollbars="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarStyle="insideOverlay"
                android:overScrollMode="ifContentScrolls"
                android:lines="15" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add"
        android:transitionName="submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/dark_blue"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>