<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:transitionName="logo"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/dicoding_svg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_menu_1"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/onboarding_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tv_title_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_menu_1"
        app:layout_constraintStart_toStartOf="@+id/img_menu_1"
        app:layout_constraintTop_toBottomOf="@+id/img_menu_1" />


    <TextView
        android:id="@+id/tv_description_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:justificationMode="inter_word"
        android:text="@string/description1"
        android:textSize="14sp"
        android:lineSpacingExtra="1.5sp"
        app:layout_constraintEnd_toEndOf="@+id/img_menu_1"
        app:layout_constraintStart_toStartOf="@+id/img_menu_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_1" />

    <ImageView
        android:id="@+id/img_menu_2"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/homepage_hero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tv_title_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/title2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_menu_2"
        app:layout_constraintStart_toStartOf="@+id/img_menu_2"
        app:layout_constraintTop_toBottomOf="@+id/img_menu_2" />

    <TextView
        android:id="@+id/tv_description_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:justificationMode="inter_word"
        android:text="@string/description2"
        android:textSize="14sp"
        android:lineSpacingExtra="1.5sp"
        app:layout_constraintEnd_toEndOf="@+id/img_menu_2"
        app:layout_constraintStart_toStartOf="@+id/img_menu_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_2" />

    <ImageView
        android:id="@+id/img_menu_3"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/onboarding_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tv_title_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:layout_marginTop="-12dp"
        android:text="@string/title3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_menu_3"
        app:layout_constraintStart_toStartOf="@+id/img_menu_3"
        app:layout_constraintTop_toBottomOf="@+id/img_menu_3" />

    <TextView
        android:id="@+id/tv_description_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:justificationMode="inter_word"
        android:text="@string/description3"
        android:textSize="14sp"
        android:lineSpacingExtra="1.5sp"
        app:layout_constraintEnd_toEndOf="@+id/img_menu_3"
        app:layout_constraintStart_toStartOf="@+id/img_menu_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_3" />



    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu_1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        tools:alpha="1"
        app:altSrc="@drawable/baseline_circle_24"
        app:layout_constraintEnd_toStartOf="@+id/menu_2"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:srcCompat="@drawable/outline_circle_24" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu_2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginBottom="16dp"
        app:altSrc="@drawable/baseline_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:srcCompat="@drawable/outline_circle_24" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu_3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginBottom="16dp"
        app:altSrc="@drawable/baseline_circle_24"
        app:layout_constraintStart_toEndOf="@id/menu_2"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:srcCompat="@drawable/outline_circle_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="530dp" />

    <com.belajar.storyapp.customview.ButtonOutline
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_register" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        tools:alpha="1"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/register"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/line_start"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:background="@color/dark_blue"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintEnd_toStartOf="@+id/tv_or"
        app:layout_constraintTop_toTopOf="@+id/tv_or"
        app:layout_constraintBottom_toBottomOf="@+id/tv_or"/>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_guest"/>

    <View
        android:id="@+id/line_end"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:background="@color/dark_blue"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintStart_toEndOf="@+id/tv_or"
        app:layout_constraintTop_toTopOf="@+id/tv_or"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"/>

    <com.belajar.storyapp.customview.ButtonOutline
        android:id="@+id/btn_guest"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:drawableBottom="@drawable/baseline_person_24"
        android:layout_marginTop="12dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toTopOf="@+id/tv_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.motion.widget.MotionLayout>